--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ cryptography==45.0.6
 distro==1.9.0
 dj-database-url==2.1.0
 Django==5.2.4
+django-admin-honeypot-updated-2021==1.2.0
 django-allauth==65.10.0
 django-environ==0.12.0
+django-ipware==7.0.1
 exceptiongroup==1.3.0
 gunicorn==21.2.0
 h11==0.16.0
@@ -27,6 +29,7 @@ pydantic_core==2.33.2
 PyJWT==2.10.1
 python-decouple==3.8
 python-dotenv==1.0.0
+python-ipware==3.0.0
 qrcode==8.2
 requests==2.32.4
 sniffio==1.3.1
