--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,11 @@ dj-database-url==2.1.0
 Django==5.2.4
 django-admin-honeypot-updated-2021==1.2.0
 django-allauth==65.10.0
+django-cors-headers==4.9.0
 django-environ==0.12.0
 django-ipware==7.0.1
+djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
 exceptiongroup==1.3.0
 gunicorn==21.2.0
 h11==0.16.0
