--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ pyjwt = "==2.10.1"
 cryptography = "==45.0.6"
 openai = "==1.98.0"
 python-dotenv = "==1.0.0"
+djangorestframework = "*"
 
 [dev-packages]
 
