--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,7 @@
-amqp==5.3.1
-annotated-types==0.7.0
-anyio==4.11.0
-asgiref==3.9.2
-async-timeout==5.0.1
-billiard==4.2.2
-celery==5.3.6
-certifi==2025.8.3
-cffi==2.0.0
-charset-normalizer==3.4.3
-click==8.3.0
-click-didyoumean==0.3.1
-click-plugins==1.1.1.2
-click-repl==0.3.0
-cryptography==45.0.6
-distro==1.9.0
-dj-database-url==2.1.0
-Django==5.2.4
-django-admin-honeypot-updated-2021==1.2.0
-django-allauth==65.10.0
-django-cors-headers==4.9.0
-django-environ==0.12.0
-django-ipware==7.0.1
+celery==5.6.2
+Django==6.0.1
 djangorestframework==3.16.1
-djangorestframework_simplejwt==5.5.1
-exceptiongroup==1.3.0
-gunicorn==21.2.0
-h11==0.16.0
-hiredis==3.2.1
-httpcore==1.0.9
-httpx==0.28.1
-idna==3.10
-jiter==0.11.0
-kombu==5.5.4
-openai==1.98.0
-packaging==25.0
-pillow==11.3.0
-prompt_toolkit==3.0.52
-psycopg2-binary==2.9.10
-pycparser==2.23
-pydantic==2.11.9
-pydantic_core==2.33.2
-PyJWT==2.10.1
-python-dateutil==2.9.0.post0
-python-decouple==3.8
-python-dotenv==1.0.0
-python-ipware==3.0.0
+openai==2.14.0
+python-dotenv==1.2.1
 qrcode==8.2
-redis==6.4.0
-requests==2.32.4
-six==1.17.0
-sniffio==1.3.1
-sqlparse==0.5.3
-tqdm==4.67.1
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
-vine==5.1.0
-wcwidth==0.2.14
-whitenoise==6.6.0
+Requests==2.32.5
